# ai-telemarketer

./: .env.example  .gitignore  README.md  ai_telemarketer.db  chat_demo.py  database.py  logger.py  outbound_call.py  pyproject.toml  server.py  start.sh  timing.py
admin/: __init__.py  routes.py
admin/templates/admin/: call_detail.html  index.html  layout.html  system.html
elevenlabs/: __init__.py  client.py
llm/: client.py
middleware/: __init__.py  logging_middleware.py
playbooks/: __init__.py  me_naiset.py
telephony/: twilio_client.py
templates/: home.html
tts/: __init__.py  elevenlabs_client.py
