[tool.poetry]
name = "ai-telemarketer"
version = "0.1.0"
description = ""
authors = ["tobenik <tobias.nikko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twilio = "^9.4.6"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
