[tool.poetry]
name = "ai-telemarketer"
version = "0.1.0"
description = ""
authors = ["tobenik <tobias.nikko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twilio = "^9.4.6"
flask = "^3.1.0"
dotenv = "^0.9.9"
openai = "^1.65.1"
websockets = "^15.0"
elevenlabs = "^1.52.0"
flask-sock = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
